gccida/g0/print_mem_expr
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_mem_expr/src/print-rtl.c:560:19: error: use of undeclared identifier 'off_7FF723'
fprintf( outfile, off_7FF723, expr->decl.name->int_cst.int_cst.low); 
                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/print_mem_expr/src/obj/print-rtl.o] Error 1
